syntax="proto3";
package doctor;
option go_package="./pkg/pb/doctor";

service Doctor{
    rpc DoctorSignUp(DoctorSignUpRequest) returns (DoctorSignUpResponse) {};
	rpc DoctorLogin(DoctorLoginRequest)returns (DoctorLoginResponse){};
	rpc DoctorsDetail(Doreq)returns(DoctorsDetailre){};
    rpc IndividualDoctor(Doid)returns(DoctorsDetailr){};
    rpc DoctorProfile(Do_id)returns(DoctorsDetailr){};
    rpc UpdateDoctorProifle(UpdateReq)returns(UpdateDoctor){};

    rpc RateDoctor(RateDoctorReq)returns(Rate){};


}
message DoctorSignUpRequest{
    string full_name = 1;
    string email = 2;
    string phone_number = 3;
    string password = 4;
    string confirm_password = 5;
    string specialization = 6;
    int32 years_of_experience = 7;
    string license_number = 8;
    int64 fees=9;

}
message DoctorDetail{
    uint64 id=1;
    string full_name = 2;
    string email = 3;
    string phone_number = 4;
    string specialization = 5;
    int32 years_of_experience = 6;
    string license_number = 7;
    int64 fees=8;

}
message DoctorSignUpResponse{
    DoctorDetail DoctorDetail=1;
	string AccessToken=2; 
	string RefreshToken =3;    
}
message DoctorLoginRequest{
	string Email=1;
	string password=2;    
}
message DoctorLoginResponse{
    DoctorDetail DoctorDetail=1;
	string AccessToken=2; 
	string RefreshToken =3;    
}
message Doreq{}
message Doid{
    string doctor_id=1;
}
message Do_id{
    uint64 id=1;
}
message DoctorsDetailr{
    uint64 id=1;
    string full_name = 2;
    string email = 3;
    string phone_number = 4;
    string specialization = 5;
    int32 years_of_experience = 6;
    string license_number = 7;
    int64 fees=8;
    int32 Rating=9;
}
message DoctorsDetailre{
    repeated DoctorsDetailr DoctorsDetailr=1;
}
message Rate{
    uint32 Rate=1;
}
message RateDoctorReq{
    string Patientid=1;
    string doctor_id=2;
    Rate Rate=3;

}
message UpdateDoctor{
    string full_name = 1;
    string email = 2;
    string phone_number = 3;
    string specialization = 4;
    int32 years_of_experience = 5;
    int64 fees=6;
}
message UpdateReq{
    uint64 id=1;
    UpdateDoctor body =2;
}
